finished script to use x and o in square spaces on board.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h1>TIC-TAC-TOE</h1>
     <hr>
 
+
+    <!-- container for the board game-->
 <div id="container"> 
     <div class="square"></div>
     <div class="square"></div>
@@ -29,6 +31,7 @@
 <div id="restartButton">
     <a class="restart" href="index.html" role="button">Restart</a>
 </div>
+
 
     <script src="index.js"></script>
 </body>
